VANITYS15:Refactor ProductRepositoryAdapterTest to improve clarity and enhance mock configurations